Added feature engine. Currently only checks for size of buffer and will begin to compute empty statistics once full (30). Will add more features tomorrow.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,12 @@ services:
         condition: service_healthy
     environment:
       KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+  
+  feature-engine:
+    build: ./feature-engine
+    container_name: feature-engine
+    depends_on:
+      kafka:
+        condition: service_healthy
+    environment:
+      KAFKA_BOOTSTRAP_SERVERS: kafka:29092
